# Beamfit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
beamfit/: __init__.py  beamfit.py  debug.py  factory.py  fit_param_conversion.py  gaussian_fit_1d.py  gaussian_linear_least_squares.py  initial_parameter_estimation.py  plotting_and_output.py  rms_integration.py  sigma_transformations.py  supergaussian.py  supergaussian_c_drivers.py  utils.py
beamfit/tests/: tests.py
misc/: generate_test_data.ipynb
src/: gaussian.c
tests/: test_analysis.py  test_fitting.py  test_sigma_parameterization.py  tests.py
